load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
#load("@xchammer//:xcodeproject.bzl", "xcode_project")

ios_application(
    name = "Backgammon",
    bundle_id = "com.example.app",
    families = ["iphone", "ipad"],
    infoplists = [":Info.plist"],
    minimum_os_version = "15.0",
    deps = [":BackgammonLibrary"],
)

swift_library(
    name = "BackgammonLibrary",
    srcs = glob([
        "*.swift",
    ]),
    data = [],
    deps = [],
)

#xcode_project(
#    name = "BackgammonProject",
#    targets = [ ":Backgammon" ],
#    paths = [ "**" ],
#)
#
