load(
  "@build_bazel_rules_apple//apple:ios.bzl",
  "ios_application",
)
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

ios_application(
    name = "BackgammonApp",
    bundle_id = "com.example.app",
    families = ["iphone", "ipad"],
    infoplists = ["Info.plist"],
    minimum_os_version = "17.0",
    deps = ["BackgammonLibrary"],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "BackgammonLibrary",
    srcs = glob([
        "*.swift",
    ]),
)
